[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Ícones 98/canhão (3).png" type="Texture" id=1]
[ext_resource path="res://Canon.gd" type="Script" id=2]
[ext_resource path="res://assets/sons/mouse-click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sons/alarmbeep.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0411, 12.2745 )

[node name="Canon" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.0919451, 0 )
scale = Vector2( 0.333333, 0.333333 )
shape = SubResource( 1 )

[node name="RightCanon" type="Position2D" parent="."]
position = Vector2( 24.39, -0.265167 )

[node name="FrontCanon" type="Position2D" parent="."]
position = Vector2( 0.0852766, -23.9272 )
rotation = -1.5708

[node name="LeftCanon" type="Position2D" parent="."]
position = Vector2( -22.5707, -0.267716 )
rotation = 3.14159

[node name="BackCanon" type="Position2D" parent="."]
position = Vector2( -0.00310993, 25.0611 )
rotation = 1.5708

[node name="SoundNode" type="Node" parent="."]

[node name="AlarmBeep" type="AudioStreamPlayer2D" parent="SoundNode"]
stream = ExtResource( 4 )

[node name="ClickShot" type="AudioStreamPlayer2D" parent="SoundNode"]
stream = ExtResource( 3 )
volume_db = 5.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
